add pictures and stuff

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="resources/css/output.css">
-    <title>Japan 2024-07</title>
+    <title>Hello!</title>
 </head>
-<body class="bg-gray-100">
- hello
+<body class="bg-gray-100 p-10 font-sans">
+    <div class="text-4xl">Hello!</div>
+    <div class="pl-5 text-lg">You look like you are looking for pictures of</div>
+    <div class="pl-10 font-bold text-lg"><a href="resources/pages/cats.html">CATS</a></div>
+    <div class="pl-10 font-bold text-lg"><a href="resources/pages/frogs.html">FROGS</a></div>
 </body>
 </html>
